// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotaWidget.vue should render correct contents 1`] = `
<div class="quota-widget">
  <div class="info-container">
    <h4 class="title is-caption is-txtGrey card-title">Widget test <span class="is-regular">quota</span></h4>
    <p class="text is-subheader is-txtGrey is-subheader">40 / 1234 Gb</p>
  </div>
  <div class="progressbar">
    <div class="progressbar progressbar--good" style="width: 3.2414910858995136%;"></div>
  </div>
</div>
`;

exports[`QuotaWidget.vue should render correctly compact widget 1`] = `
<div class="quota-widget">
  <div class="info-container">
    <h4 class="title is-caption is-txtGrey card-title">Another test <span class="is-regular">credits</span></h4>
    <p class="text is-subheader is-txtGrey is-caption">12 / 1234 </p>
  </div>
  <div class="progressbar">
    <div class="progressbar progressbar--good" style="width: 0.9724473257698543%;"></div>
  </div>
</div>
`;

exports[`QuotaWidget.vue should render problem bar if used ammount is over 90% 1`] = `
<div class="quota-widget">
  <div class="info-container">
    <h4 class="title is-caption is-txtGrey card-title">My test <span class="is-regular">test</span></h4>
    <p class="text is-subheader is-txtGrey is-subheader">932 / 1000 </p>
  </div>
  <div class="progressbar">
    <div class="progressbar progressbar--problem" style="width: 93.2%;"></div>
  </div>
</div>
`;

exports[`QuotaWidget.vue should render warning bar if used ammount is over 60% and under 90% 1`] = `
<div class="quota-widget">
  <div class="info-container">
    <h4 class="title is-caption is-txtGrey card-title">My test <span class="is-regular">test</span></h4>
    <p class="text is-subheader is-txtGrey is-subheader">610 / 1000 </p>
  </div>
  <div class="progressbar">
    <div class="progressbar progressbar--warning" style="width: 61%;"></div>
  </div>
</div>
`;
